--- a/application.json
+++ b/application.json
@@ -21,6 +21,19 @@
       "showSignIn": true
     }
   },
+  "publishedApplicationDetail": {
+    "navigationSetting": {
+      "showNavbar": true,
+      "orientation": "side",
+      "navStyle": "sidebar",
+      "position": "static",
+      "itemStyle": "text",
+      "colorStyle": "light",
+      "logoAssetId": "",
+      "logoConfiguration": "logoAndApplicationTitle",
+      "showSignIn": true
+    }
+  },
   "color": "#F4FFDE",
   "icon": "bus",
   "unpublishedCustomJSLibs": [],
