--- a/application.json
+++ b/application.json
@@ -7,6 +7,10 @@
     {
       "id": "Page2",
       "isDefault": false
+    },
+    {
+      "id": "Public.users",
+      "isDefault": false
     }
   ],
   "viewMode": false,
