--- a/application.json
+++ b/application.json
@@ -29,6 +29,9 @@
   "icon": "bus",
   "unpublishedCustomJSLibs": [
     {
+      "uidString": "xmlParser_https://cdnjs.cloudflare.com/ajax/libs/fast-xml-parser/3.17.5/parser.min.js"
+    },
+    {
       "uidString": "jsonwebtoken_/libraries/jsonwebtoken@8.5.1.js"
     }
   ],
